# tg-ai-manager

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  alembic.ini  dev.Dockerfile  docker-compose.yml  download_libs.sh  main.py  mechanism.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: dev.Dockerfile  entrypoint.sh  prod.Dockerfile  supervisord.conf
migrations/: env.py
migrations/versions/: 20240108_initial_schema.py  20240109_add_premium_column.py  20240112_add_rule_config.py  20260112_add_debug_mode.py  20260123_add_ai_settings.py  20260325_add_ai_fields.py  20260513_unique_rule_scope.py
src/: app.py  config.py  container.py  jinja_filters.py  services.py
src/adapters/: sqlite_repo.py  telegram.py  telethon_mappers.py  valkey_repo.py
src/ai/: factory.py  gemini.py  ports.py
src/application/: interactors.py  message_views.py
src/domain/: models.py  ports.py
src/handlers/: skip_ads_handler.py
src/infrastructure/: alerts.py  arq_config.py  db.py  event_bus.py  html.py  logging.py  maintenance.py  queue_jobs.py  queue_monitor.py  queue_service.py  queue_worker.py  security.py  tasks.py  telegram_queue.py
src/rules/: container.py  decisions.py  models.py  ports.py  service.py  sqlite_repo.py  sync.py
tests/: test_ai.py  test_e2e.py  test_event_flow.py  test_event_handlers.py  test_export.py  test_message_views.py  test_pipeline_ai.py  test_queue.py  test_read_ops.py  test_requests.py  test_rules.py  test_sanitize.py  test_settings_ai.py  test_sync.py  test_user_repo_ai.py
(+85 files in other folders)
