[project]
name = "tg-ai-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings",
    "python-dotenv>=1.2.1",
    "quart",
    "telethon>=1.42.0",
    "structlog>=24.1.0",
    "redis>=5.0.1",
    "hypercorn>=0.16.1",
]

[dependency-groups]
dev = ["watchfiles>=0.21.0", "ruff>=0.9.0"]
