[project]
name = "tg-ai-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings",
    "python-dotenv>=1.2.1",
    "quart",
    "telethon>=1.42.0",
    "structlog>=24.1.0",
    "redis>=5.0.1",
    "hypercorn>=0.16.1",
    "alembic>=1.13.0",
    "cryptography>=44.0.0",
    "arq>=0.26.3",
]

[dependency-groups]
dev = ["watchfiles>=0.21.0", "ruff>=0.9.0"]
