[project]
name = "tg-ai-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "quart>=0.20.0",
    "telethon>=1.42.0",
    "structlog>=25.5.0",
    "redis>=7.4.0",
    "hypercorn>=0.18.0",
    "alembic>=1.18.4",
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["watchfiles>=1.1.1", "ruff>=0.15.7", "pytest>=9.0.2", "pytest-asyncio>=1.3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
